# CTAI_MachineLearning

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config_cnn.yaml  config_cross_attention.yaml  config_electra_base.yaml  config_phobert_optimized.yaml  config_pretrained_nli.yaml  config_pretrained_nli_balanced.yaml  config_pretrained_nli_xl.yaml  config_roberta_base.yaml  config_sbert.yaml  config_svm.yaml  config_t5.yaml  config_xgboost.yaml
data/: README.md  X_test_ground_truth.csv  ma.pptx  test_bow_features.csv  test_statistic_features.csv  test_tfidf_features.csv  train_bow_features.csv  train_statistic_features.csv  train_tfidf_features.csv  val_bow_features.csv  val_statistic_features.csv  val_tfidf_features.csv
evaluate/: evaluate_retrieve.py
notebooks/: EDA.ipynb  ML_Approach.ipynb  api_call.ipynb  baseline-solution.ipynb  bert_logistic.py  evaluator.ipynb  fake-or-real-prediction.ipynb  feature_engineering.py  read_data.ipynb  submission.csv  submission_api_call_full.csv  submission_catboost.csv  submission_e5_catboost_improved_augment.csv  submission_e5_catboost_improved_augmented_1.csv  test.ipynb  test_4.ipynb  y_labels.pkl
src/: CONFIG.py  LSTM.py  PretrainedModel.py  build_dataset_dataloader.py  dataloader.py  dl_make_submission.py  dl_preparedata.py  load_data.py  main.py  submission_case1_LSTM.csv  submission_case2_LSTM.csv  test.ipynb  train_pretrained_textclassification.py  train_pretrained_textpair.py  train_textclassification.py  train_textpair.py  training_model.py
tests/: __init__.py  conftest.py  test_load_data.py
(+51 files in other folders)
