[project]
name = "ctai-machinelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "underthesea>=6.8.4",
    "xgboost>=3.0.4",
]
