[project]
name = "ctai-machinelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "genai>=2.1.0",
    "gensim>=4.3.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langdetect>=1.0.9",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pip>=25.2",
    "py-dotenv>=0.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "textstat>=0.7.8",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchtext>=0.18.0",
    "transformers>=4.55.2",
    "underthesea>=6.8.4",
    "xgboost>=3.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
